# aola_test_task

./: Dockerfile  README.md  docker-compose.yml  postman_collection.json  pyproject.toml
aola/: .gitignore  manage.py  pytest.ini  temp.py
aola/aola/: .env  asgi.py  settings.py  urls.py  wsgi.py
aola/fixtures/: data_dump.json
aola/main/: admin.py  constants.py  models.py  paginations.py  serializers.py  tests.py  urls.py  views.py
aola/main/api/: exception_handler.py  exceptions.py  paginations.py  serializers.py  views.py
aola/main/migrations/: 0001_initial.py  0002_rename_notion_note_rename_name_achievement_title.py  0003_achievement_icon_ad_image.py  0004_achievement_owners.py
aola/main/tests/: conftest.py  factories.py  tests.py
